# FN

./: .gitignore  Cargo.toml  LICENSE  README.md  ZapretCard.svelte  app.manifest  index.html  package-lock.json  package.json  stores.ts  validation.ts  vite.config.ts  winws_mapper.rs
FN-0.5.0-source/: tsconfig.json
FN-0.5.0-source/scripts/: build-tgws-headless.ps1  export-github-source.ps1
FN-0.5.0-source/src/: App.svelte
FN-0.5.0-source/src-tauri/: Cargo.toml  build.rs
FN-0.5.0-source/src-tauri/src/: autostart.rs  config.rs  error.rs  tgws.rs
FN-0.5.0-source/src-tauri/windows/: installer-hooks.nsh
scripts/: prepare-resources.ps1  tgws_headless.py
src/: App.svelte  app.css  main.ts
src-tauri/: tauri.conf.json
src-tauri/assets/: builtin_strategies.json
src-tauri/resources/tgws/: PLACE_BINARY_HERE.txt  README.md
src-tauri/resources/zapret/: PLACE_BINARIES_HERE.txt
src-tauri/src/: commands.rs  db.rs  error.rs  github.rs  lib.rs  main.rs  state.rs  strategies.rs  tray.rs  zapret.rs
src-tauri/src/bypass/: winws.rs
src-tauri/src/strategy/: bat_import.rs  benchmark.rs  fake_tls.rs  mod.rs  schema.rs  winws_mapper.rs
src/lib/: api.ts  guards.ts  types.ts  validation.ts
src/lib/components/: AutostartRow.svelte  LogPanel.svelte  StatsBar.svelte  Toasts.svelte  Toggle.svelte  ZapretCard.svelte
