[package]
name = "fn-app"
version = "0.5.0"
description = "FN — DPI bypass & proxy control center"
authors = ["FN"]
edition = "2021"
rust-version = "1.77.2"

# `fn` is a reserved keyword, so the library crate is `fn_lib`.
[lib]
name = "fn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "fn-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.3"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process", "net", "io-util"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = "2"
sysinfo = "0.31"
thiserror = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
